Fix elements alignment on quizzes

--- a/src/app/pages/player/assessment/components/simple-choice/simple-choice.component.scss
+++ b/src/app/pages/player/assessment/components/simple-choice/simple-choice.component.scss
@@ -15,7 +15,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-grow: 1;
   }
   ion-card-title{
     font-size: 1rem;
